--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 URI=mongodb+srv://circleuser:teamcircle@cluster0.o7o8p.mongodb.net/task?retryWrites=true&w=majority
+URL=http://localhost:5000
